--- a/schemas/index.html
+++ b/schemas/index.html
@@ -12,9 +12,9 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-	<link rel="stylesheet" href="/docs/css/bootstrap.css">
-	<link rel="stylesheet" href="/docs/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="/docs/css/main.css">
+	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="../css/bootstrap-theme.css">
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
         <!--[if lt IE 7]>
@@ -94,9 +94,9 @@
             </div> <!-- /container -->
 
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-            <script>window.jQuery || document.write('<script src="/docs/js/jquery.js"><\/script>')</script>
-            <script src="/docs/js/bootstrap.js"></script>
-            <script src="/docsjs/main.js"></script>
+            <script>window.jQuery || document.write('<script src="../js/jquery.js"><\/script>')</script>
+            <script src="../js/bootstrap.js"></script>
+            <script src="../js/main.js"></script>
 
             <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
             <script>
