Fixed nav path bug

--- a/schemas/index.html
+++ b/schemas/index.html
@@ -25,9 +25,9 @@
             	<div class="masthead">
             		<h3 class="text-muted">SagePoint Software&#8482;</h3>
             		<ul class="nav nav-justified">
-            			<li><a href="/docs">Getting Started</a></li>
+            			<li><a href="/">Getting Started</a></li>
             			<li><a href="#">API Reference</a></li>
-            			<li class="active"><a href="/docs/schemas/index.html">Message Schemas</a></li>
+            			<li class="active"><a href="#">Message Schemas</a></li>
             			<li><a href="#">Examples</a></li>
             			<li><a href="#">Contact</a></li>
             		</ul>
